# galaxy42

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  Changelog.md  Doxyfile  Jenkinsfile  LICENCE-by-Antinet.txt  LICENCE.txt  README.md  README.txt  a.conf  build-extra-libs.sh  build-gitian  build-gitian.sh  build.sh  c  c_ip46_addr.cpp  c_json_genconf.cpp  c_json_load.cpp  c_json_load.hpp  c_peering.cpp  c_peering.hpp  check  connect_to.my.conf  cpputils.hpp  crypto.cpp  crypto.hpp  debt.txt  do  do-hello  download.sh  empty.cpp  empty2.cpp  empty3.cpp  filestorage.cpp  filestorage.hpp  formats_ip.hpp  galaxy.conf  (+41 more)
antinet/src/antinet_sim/: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.txt  arm-spec  c_allegromisc.cpp  c_allegromisc.hpp  c_api_tr.cpp  c_api_tr.hpp  c_bbank.cpp  c_bbank.hpp  c_bitmaps.cpp  c_bitmaps.hpp  c_crypto.hpp  c_dijkstry.cpp  c_dijkstry.hpp  c_dir_mgr.cpp  c_dir_mgr.hpp  c_drawtarget.cpp  c_drawtarget.hpp  c_drawtarget_opengl.cpp  c_drawtarget_opengl.hpp  c_file_loader.cpp  c_file_loader.hpp  c_geometry.cpp  c_geometry.hpp  c_gui.cpp  c_gui.hpp  c_logical.cpp  c_logical.hpp  c_market.cpp  c_market.hpp  c_msg.cpp  c_msg.hpp  c_netdev.cpp  c_netdev.hpp  c_network.cpp  c_network.hpp  c_networld.cpp  (+32 more)
contrib/windows-service-wrapper/: CMakeLists.txt  main.cpp
crypto_ops/crypto/: CMakeLists.txt  LICENSE.txt  TODO.txt  c_crypto_RSA.hpp  c_crypto_geport.cpp  c_crypto_geport.hpp  c_encryption.cpp  c_encryption.hpp  crypto_ed25519.cpp  crypto_ed25519.hpp  libmath.hpp  main.cpp
crypto_ops/crypto/sha_src/: sha512.cpp  sha512.hpp
crypto_ops/ring_cryptography_test1/: CMakeLists.txt  c_logger.cpp  c_logger.hpp  c_ring_shuffle.cpp  c_ring_shuffle.hpp  c_simulation.cpp  c_simulation.hpp  c_user.cpp  c_user.hpp  cyclic_list.hpp  main.cpp
doc_and_drafts/bit_payments/: CMakeLists.txt  LICENSE.txt  README.txt  c_bit_payments.cpp  c_bit_payments.h  c_bit_payments.hpp  test.cpp
doc_and_drafts/coin_signing/: CMakeLists.txt  README.txt  c_contract.cpp  c_contract.hpp  c_evidences.cpp  c_evidences.hpp  c_json_serializer.cpp  c_json_serializer.hpp  c_locked_queue.hpp  c_mint.cpp  c_mint.hpp  c_netuser.cpp  c_netuser.hpp  c_rpc_bitwallet.cpp  c_rpc_bitwallet.hpp  c_token.cpp  c_token.hpp  c_user.cpp  c_user.hpp  c_wallet.cpp  c_wallet.hpp  coinsign_error.hpp  libs01.cpp  libs01.hpp  main.cpp  tests.cpp  tests.hpp
doc_and_drafts/coin_signing/network/: c_TCPasync.cpp  c_TCPasync.hpp  c_connection_base.hpp  c_locked_queue.hpp  c_netuser.cpp  c_netuser.hpp  c_tcp_asio_node.cpp  c_tcp_asio_node.hpp
doc_and_drafts/coin_signing/ptest/: .gitignore  CMakeLists.txt  additionals.cpp  additionals.hpp  assert_macro.hpp  config.cpp  config.hpp  general_macro_overloading.hpp  ptest.cpp  ptest.hpp  (+5 more)
doc_and_drafts/contract_signature/: CMakeLists.txt  c_contract.cpp  c_contract.hpp  c_mint.hpp  c_user.hpp  c_wallet.cpp  c_wallet.hpp  main.cpp
doc_and_drafts/market_server/: CMakeLists.txt  c_crypto_RSA.hpp  c_crypto_ed25519.hpp  c_market_server.hpp  c_market_user.hpp  c_server_msg_parser.hpp  c_users_database.hpp
drafts/: CMakeLists.txt
drafts/bit_payments/: test.cpp
drafts/coin_signing/: CMakeLists.txt  c_encryption.cpp  c_encryption.hpp  c_mint.cpp  c_mint.h  c_mint.hpp  c_token.cpp  c_token.hpp  c_user.cpp  c_user.hpp  c_wallet.cpp  c_wallet.hpp  coin_signing  main.cpp
drafts/contract_signature/: CMakeLists.txt  c_crypto_ed25519.cpp  c_crypto_ed25519.hpp  c_random_generator.hpp  c_token.cpp  c_token.hpp  c_user.cpp  c_user.hpp  main.cpp
drafts/dht-draft/: deployment.pri  dht_world.cpp  dht_world.h  dhtnode.cpp  dhtnode.h  headers.h  main.cpp  nearestfunct.cpp  nearestfunct.h
drafts/market_client/: CMakeLists.txt  c_UDPasync.cpp  c_UDPasync.hpp  c_connect.cpp  c_connect.hpp  c_encryption.cpp  c_encryption.hpp  c_locked_queue.hpp  c_market_client.cpp  c_market_client.hpp  c_statistics.cpp  c_statistics.hpp  c_threadguard.hpp  test.cpp
drafts/market_server/: CMakeLists.txt  c_market_server.cpp  c_server_msg_parser.cpp  c_server_msg_parser.hpp  c_users_database.cpp  main.cpp
galaxy42/: .gitignore  CMakeLists.txt  Doxyfile  LICENCE.txt  README.txt  a.conf  build-extra-libs.sh  c_ip46_addr.cpp  c_ip46_addr.hpp  c_json_genconf.cpp  c_json_genconf.hpp  c_json_load.cpp  c_json_load.hpp  c_peering.cpp  c_peering.hpp  connect_from.my.conf  connect_to.seed.conf  crypto.cpp  crypto.hpp  do  download.sh  filestorage.cpp  filestorage.hpp  galaxy.conf  galaxy_debug.cpp  gen-key-demo.sh  generate_config.cpp  generate_config.hpp  glue_lockedstring_trivialserialize.cpp  glue_lockedstring_trivialserialize.hpp  glue_sodiumpp_crypto.hpp  haship.cpp  haship.hpp  libs0.hpp  libs1.cpp  libs1.hpp  loadjson.cpp  loadjson.hpp  loop  ntrucpp.hpp  (+9 more)
galaxy42/config/: .gitignore  demo.conf.example
galaxy42/crypto/: crypto.cpp  crypto.hpp  crypto_basic.cpp  crypto_basic.hpp  multikeys.cpp  multikeys.hpp  multikeys.tpl.hpp  ntrupp.cpp  ntrupp.hpp  sidhpp.cpp
galaxy42/crypto-sodium/: ecdh_ChaCha20_Poly1305.hpp
galaxy42/doc/: galaxy_crypto.txt  scripts.txt
galaxy42/rpc/: c_connection_base.hpp  c_tcp_asio_node.cpp  rpc.cpp  rpc.hpp
galaxy42/script/: del_namespace.sh
galaxy42/test/: crypto-sodium.cpp  crypto.cpp  filestorage.cpp  trivialserialize.cpp
qa/rpc_tester/: CMakeLists.txt  main.cpp
src-gui/: CMakeLists.txt  addpeerdialog.cpp  addpeerdialog.h  addpeerdialog.ui  addressbookform.cpp  addressbookform.h  addressbookform.ui  addressdialog.cpp  addressdialog.hpp  addressdialog.ui  addressmodel.cpp  addressmodel.h  commandexecutor.cpp  commandexecutor.hpp  commandparser.cpp  commandparser.hpp  commandsender.cpp  commandsender.h  connectionstatusform.cpp  connectionstatusform.h  connectionstatusform.ui  dataeater.cpp  dataeater.hpp  debugdialog.cpp  debugdialog.hpp  debugdialog.ui  get_host_info.cpp  get_host_info.hpp  get_host_info.ui  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  meshpeer.cpp  meshpeer.h  netclient.cpp  netclient.hpp  nodecontrolerdialog.cpp  nodecontrolerdialog.h  (+38 more)
src-gui/qtest/: main.cpp  t_dataeater.hpp  test_meshpeer.h
(+818 files in other folders)
